<resources>
    <string name="app_name">HexCalculator</string>
    <string name="hello">helloWorld</string>
    <string name="calculatorTitle">SimpleHEX_Calculator</string>
    <string name="delete">DEL</string>
    <string name="clean">AC</string>
    <string name="binary">BIN</string>
    <string name="decimal">DEC</string>
    <string name="equal">=</string>
    <string name="device">÷</string>
    <string name="cross">×</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">A</string>
    <string name="eleven">B</string>
    <string name="twelve">C</string>
    <string name="thirteen">D</string>
    <string name="fourteen">E</string>
    <string name="fifteen">F</string>
</resources>